// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a component 1`] = `
<p
  className="sc-bdVaJa EuHED"
  color="tomato"
>
  Default text
</p>
`;

exports[`should render a component with a prop 1`] = `
<p
  className="sc-bdVaJa jbrfPx"
  color="tomato"
>
  Default text
</p>
`;
